new_arch_for_abl_study

--- a/hw_as/testing.ipynb
+++ b/hw_as/testing.ipynb
@@ -7,10 +7,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from model import RawNet2\n",
-    "m = RawNet2(64000)\n",
-    "batch = torch.randn(size=(1, 64000))\n",
-    "m(batch, 1)\n"
+    "from model import RawNet2"
    ]
   },
   {
@@ -18,7 +15,10 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "model = RawNet2()"
+   ]
   },
   {
    "cell_type": "code",
@@ -26,15 +26,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch = torch.randn(size=(1, 64000))"
+    "batch = torch.randn(size=(1, 34356))\n",
+    "batch2 = torch.randn(size=(1, 53446))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = pad_sequence([batch.reshape(-1), batch2.reshape(-1)], batch_first=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 0])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model(a)[\"logits\"].argmax(-1)"
+   ]
   },
   {
    "cell_type": "code",
