--- a/hw_as/testing.ipynb
+++ b/hw_as/testing.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "from model import RawNet2"
+    "import torch"
    ]
   },
   {
@@ -57,6 +56,56 @@
    ],
    "source": [
     "model(a)[\"logits\"].argmax(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = torch.ones(size=(300,))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([500])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.nn.functional.pad(a, (0, 200)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "from datetime import datetime\n",
+    "\n",
+    "save_dir = Path(\"saved/\")\n",
+    "exper_name = \"name\"\n",
+    "run_id = datetime.now().strftime(r\"%m%d_%H%M%S\")\n",
+    "_save_dir = str(save_dir / \"models\" / exper_name / run_id)\n",
+    "_log_dir = str(save_dir / \"log\" / exper_name / run_id)\n",
+    "\n",
+    "# make directory for saving checkpoints and log.\n",
+    "\n",
+    "Path(_save_dir).mkdir(parents=True, exist_ok=True)\n",
+    "Path(_log_dir).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
